--- a/core/src/stories/general/biblioteca.stories.mdx
+++ b/core/src/stories/general/biblioteca.stories.mdx
@@ -54,13 +54,13 @@ yarn add --dev @mbrandao/med-components
 Para utilizar a biblioteca, no arquivo **./src/medsoft/global.scss**, importar:
 
 ``` scss
-@import '~@mbrandao/med-components/src/med-components-medsoft';
+@import '~@mbrandao/med-components/src/med-components.scss';
 ```
 Se existir a necessidade da utilização de **variáveis, functions e mixins SASS**, no arquivo em que eles serão
 utilizados, importar:
 
 ``` scss
-@import '~@mbrandao/med-components/src/medsoft/medsoft';
+@import '~@mbrandao/med-components/src/abstracts';
 ```
 
 ### External Pages
@@ -75,7 +75,7 @@ Se existir a necessidade da utilização de **variáveis, functions e mixins SAS
 utilizados, importar:
 
 ``` scss
-@import '~@mbrandao/med-components/src/global/global';
+@import '~@mbrandao/med-components/src/abstracts';
 ```
 
 ### Inscrições
@@ -90,7 +90,5 @@ Se existir a necessidade da utilização de **variáveis, functions e mixins SAS
 utilizados, importar:
 
 ``` scss
-@import '~@mbrandao/med-components/src/global/global';
+@import '~@mbrandao/med-components/src/abstracts';
 ```
-
-### Recursos
