--- a/core/src/stories/global/mixins/breakpoints.stories.mdx
+++ b/core/src/stories/global/mixins/breakpoints.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 import breakpoints from "../../assets/breakpoints.jpg";
 
-<Meta title="Global/Mixins/Breakpoints" />
+<Meta title="Sass/Mixins/Breakpoints" />
 
 # 🧪 Breakpoints
 
@@ -12,7 +12,7 @@ Mixins **globais** relacionados a **breakpoints**.
 No arquivo em que a utilização dos **mixins** forem **necessárias**, importar:
 
 ``` scss
-@import '~@mbrandao/med-components/src/global/global';
+@import '~@mbrandao/med-components/src/abstracts';
 ```
 
 Os breakpoints são quebras de layout padrões criadas com o intuito de padronizar as principais resoluções de viewport que as aplicações
