--- a/core/src/stories/global/variables.stories.mdx
+++ b/core/src/stories/global/variables.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Global/Variables" />
+<Meta title="Sass/Variables" />
 
 # 🎲 Variables
 
@@ -11,8 +11,17 @@ import { Meta } from "@storybook/addon-docs/blocks";
 No arquivo em que a utilização das **variáveis** forem **necessárias**, importar:
 
 ``` scss
-@import '~@mbrandao/med-components/src/global/global';
+@import '~@mbrandao/med-components/src/abstracts';
 ```
+
+## 🎲 utils
+
+| Variable            | Descrição                                                                                                                                                  | Tipo   | Default  |
+| ------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | -------- |
+| **$med-iphone-x-top** | Define a distância para alocar um elemento referente ao **[chanfrado](https://support.apple.com/en-ca/HT207354)** dos dispositivos da família iphone X   | Number | **40px** |
+| **$med-iphone-top**   | Define a distância para alocar um elemento referente aos **[ícones de status](https://support.apple.com/en-ca/HT207354)** dos dispositivos iphone padrão | Number | **20px** |
+| **$med-mac-top**      | Define a distância para alocar um elemento referente aos botões de controle de uma aplicação desktop macOS                                               | Number | **15px** |
+
 
 ## 🎲 tokens: $med-font-size-*
 
