--- a/core/src/stories/global/mixins/tipografia.stories.mdx
+++ b/core/src/stories/global/mixins/tipografia.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Global/Mixins/Tipografia" />
+<Meta title="Sass/Mixins/Tipografia" />
 
 # 🧪 Tipografia
 
@@ -11,7 +11,7 @@ Mixins **globais** relacionados a **tipografia**.
 No arquivo em que a utilização dos **mixins** forem **necessárias**, importar:
 
 ``` scss
-@import '~@mbrandao/med-components/src/global/global';
+@import '~@mbrandao/med-components/src/abstracts';
 ```
 
 ## 🧪 font-face()
