--- a/core/src/stories/global/mixins/utils.stories.mdx
+++ b/core/src/stories/global/mixins/utils.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 import breakpoints from "../../assets/breakpoints.jpg";
 
-<Meta title="Global/Mixins/Utils" />
+<Meta title="Sass/Mixins/Utils" />
 
 # 🧪 Utils
 
@@ -12,7 +12,7 @@ Mixins **globais** relacionados a **utilidades gerais**.
 No arquivo em que a utilização dos **mixins** forem **necessárias**, importar:
 
 ``` scss
-@import '~@mbrandao/med-components/src/global/global';
+@import '~@mbrandao/med-components/src/abstracts';
 ```
 
 ## 🧪 landscape()
@@ -47,3 +47,87 @@ Mixin criado para estilizações pontuais dependentes de orientação:
 | ---------------- | ---------------------------------- | ------ | ------------- |
 | **$orientation** | Define a orientação do dispositivo | String | **landscape** |
 
+## 🧪 iphone-x-range()
+
+Mixin criado para estilização pontual nos tamanhos de viewport específicos de dispositivos da **família iphone X**.
+Esse mixins são geralmente utilizados para ajustar a altura do header devido ao **[chanfrado](https://support.apple.com/en-ca/HT207354)**
+presente nesses dispositivos, e se for o caso, deve ser utilizado em conjunto com as
+**[variáveis SASS](http://desenv.ordomederi.com/med-components/?path=/story/medsoft-variables--page)** específicas
+do medsoft, como mostra o exemplo abaixo.
+
+**Exemplo:** _Ajuste no header quando a aplicação estiver sendo executada nos dispositivos da família iphone X:_
+
+```scss
+.class {
+  @include iphone-x-range {
+    padding-top: $med-iphone-x-top;
+  }
+}
+```
+
+## 🧪 platform()
+
+Para mobile o mixin utiliza as classes:
+
+- **android:** `.platform-android`
+- **ios:** `.platform-ios`
+
+Para Desktop o mixin utiliza as classes:
+
+- **mac:** `.plt-desktop .platform-macintel`
+- **windows:** `.plt-electron.plt-desktop`
+- **desktop:**`.plt-electron.plt-desktop`
+
+Essas classes são definidas pelo **[plataform provider](https://ionicframework.com/docs/angular/platform)** do ionic.
+
+```scss
+@mixin platform($platform) {
+  @if $platform == "android" {
+    .platform-android {
+      @content;
+    }
+  } @else if $platform == "ios" {
+    .platform-ios {
+      @content;
+    }
+  } @else if $platform == "windows" {
+    .plt-electron.plt-desktop {
+      @content;
+    }
+  } @else if $platform == "mac" {
+    .plt-desktop .platform-macintel {
+      @content;
+    }
+  } @else if $platform == "desktop" {
+    .plt-electron.plt-desktop {
+      @content;
+    }
+  }
+}
+```
+
+### Parâmetros
+
+| Parâmetro   | Descrição                           | Tipo                                                                  | Default |
+| ----------- | ----------------------------------- | --------------------------------------------------------------------- | ------- |
+| `$platform` | Define a plataforma a ser utilizada | String `'android'` ou`'ios'` ou `'windows'` ou `'mac'` ou `'desktop'` | -       |
+
+**Exemplo:** estilização de uma classe especifíca apenas para plataforma android.
+
+```scss
+@import './theme/abstracts/mixin-devices';
+
+:host {
+  .class {
+    ...
+  }
+}
+
+@include platform('android') {
+  :host {
+    .class {
+      ...
+    }
+  }
+}
+```
