--- a/core/src/stories/components/icon/icon-usage.stories.mdx
+++ b/core/src/stories/components/icon/icon-usage.stories.mdx
@@ -6,10 +6,10 @@ import { Meta } from "@storybook/addon-docs/blocks";
 
 ## Propriedades
 
-| Propriedade  | Atributo   | Descrição                                                           | Tipo                                                                                       | Default       |
-| ------------ | ---------- | ------------------------------------------------------------------- | ------------------------------------------------------------------------------------------ | ------------- |
-| **color**    | **color**  | Define a cor do badge baseado nos tokens. **⚠️ omitir med-color-** | **[tokens](http://desenv.ordomederi.com/med-components/?path=/story/tokens-cores--cores)** | **undefined** |
-| **name**     | **name**   | Define o nome do icone.                                             | **"string"**                                                                               | **undefined** |
+| Propriedade  | Atributo   | Descrição                | Tipo                                                                                              | Default       |
+| ------------ | ---------- | ------------------------ | ------------------------------------------------------------------------------------------------- | ------------- |
+| **color**    | **color**  | Define a cor do botão.   | **[Color](http://desenv.ordomederi.com/med-components/?path=/story/enums-enums--page#medcolors)** | **undefined** |
+| **name**     | **name**   | Define o nome do icone.  | **"string"**                                                                                      | **undefined** |
 
 ```html
 <ion-icon name="med-arrow-left-circle">ion-button</ion-icon>
