Squashed commit of the following:
commit 71050598d3c48f34e141ee09279d6ca3a6a37364
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Tue Jun 29 18:27:14 2021 -0300

    ajustes fab

commit 284184ec6b481a6455ddc49c0386e1bdae004d47
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Tue Jun 29 18:27:06 2021 -0300

    Ajustes chip e fab button

commit aaa07ae5b420696a191e680c890b500a3c09c7f2
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Mon Jun 28 18:26:19 2021 -0300

    revisão chip

commit c0fd4012eade700541f40355285d28aa19707ec3
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Mon Jun 28 16:34:30 2021 -0300

    Revisão componentes

--- a/core/src/stories/components/chip/chip-usage.stories.mdx
+++ b/core/src/stories/components/chip/chip-usage.stories.mdx
@@ -8,10 +8,10 @@ Documentação auxiliar ion-button: **https://ionicframework.com/docs/api/chip**
 
 ## Propriedades
 
-| Propriedade  | Atributo     | Descrição                               | Tipo           | Default       |
-| ------------ | ------------ | --------------------------------------- | -------------- | ------------- |
-| **outline**  | **outline**  | Define o estilo transparente com borda. | **"boolean"**  | **undefined** |
-| **color**    | **color**    | Define o tamanho do botão.              | **"boolean"**  | **undefined** |
+| Propriedade  | Atributo     | Descrição                               | Tipo                                                                                              | Default       |
+| ------------ | ------------ | --------------------------------------- | ------------------------------------------------------------------------------------------------- | ------------- |
+| **outline**  | **outline**  | Define o estilo transparente com borda. | **"boolean"**                                                                                     | **undefined** |
+| **color**    | **color**    | Define a cor do botão.                  | **[Color](http://desenv.ordomederi.com/med-components/?path=/story/enums-enums--page#medcolors)** | **undefined** |
 
 O uso do componente **ion-label** e **ion-icon** é necessário, para estilizar corretamente o componente **ion-chip**.
 
@@ -38,11 +38,6 @@ O uso do componente **ion-label** e **ion-icon** é necessário, para estilizar 
 
 <!-- outline -->
 <ion-chip outline>
-  <ion-label>ion-chip</ion-label>
-</ion-chip>
-
-<!-- color -->
-<ion-chip color>
   <ion-label>ion-chip</ion-label>
 </ion-chip>
 ```
