--- a/core/src/stories/components/med-navbar/med-navbar-usage.stories.mdx
+++ b/core/src/stories/components/med-navbar/med-navbar-usage.stories.mdx
@@ -68,18 +68,10 @@ import { Meta } from "@storybook/addon-docs/blocks";
 
 ### Propriedades
 
-| Propriedade  | Atributo     | Descrição                | Tipo             | Default         |
-| ------------ | ------------ | ------------------------ | ---------------- | --------------- |
-| **dsName**   | **ds-name**  | Define a navbar.         | **"secondary"**  | **"secondary"** |
-| **dsTheme**  | **ds-theme** | Define o tema da navbar. | **"secondary"**  | **"secondary"** |
-
-
-### Atributos
-
-| slot                | Descrição                                                              | valores            |
-| ------------------- | ---------------------------------------------------------------------- | ------------------ |
-| **ds-name**         | Define a navbar.                                                       | **transparent**    |
-| **ds-theme**        | Define a cor dos itens da navbar em contrate a determinado background. | **dark**/**light** |
+| Propriedade  | Atributo     | Descrição                | Tipo              | Default            |
+| ------------ | ------------ | ------------------------ | ----------------- | ------------------ |
+| **dsName**   | **ds-name**  | Define a navbar.         | **"transparent"** | **"transparent"**  |
+| **dsTheme**  | **ds-theme** | Define o tema da navbar. | **"secondary"**   | **dark**/**light** |
 
 ### Slots
 
