Fix de regressoes

--- a/core/src/stories/components/snackbar/snackbar-usage.stories.mdx
+++ b/core/src/stories/components/snackbar/snackbar-usage.stories.mdx
@@ -60,7 +60,7 @@ const createToast = async () => {
 ```ts
 const createToast = async () => {
   toastController.create({
-    color: 'success-medium' | 'error-medium',
+    color: 'feedback-success' | 'feedback-error',
   })
 }
 ```
