--- a/core/src/stories/components/med-cartao-resposta-lista/med-cartao-resposta-lista-usage.stories.mdx
+++ b/core/src/stories/components/med-cartao-resposta-lista/med-cartao-resposta-lista-usage.stories.mdx
@@ -19,13 +19,13 @@ import { Meta } from "@storybook/addon-docs/blocks";
   <med-cartao-resposta-item active>02</med-cartao-resposta-item>
 
   <!-- correto -->
-  <med-cartao-resposta-item color="success-medium">03</med-cartao-resposta-item>
+  <med-cartao-resposta-item color="feedback-success">03</med-cartao-resposta-item>
 
   <!-- incorreto -->
-  <med-cartao-resposta-item color="error-medium">04</med-cartao-resposta-item>
+  <med-cartao-resposta-item color="feedback-error">04</med-cartao-resposta-item>
 
   <!-- anulada -->
-  <med-cartao-resposta-item color="warning-medium" anulada>05</med-cartao-resposta-item>
+  <med-cartao-resposta-item color="feedback-warning" anulada>05</med-cartao-resposta-item>
 
   <!-- impressa -->
   <med-cartao-resposta-item impressa>06</med-cartao-resposta-item>
