--- a/core/src/stories/components/02-team/monta-provas/chart/chart-usage.stories.mdx
+++ b/core/src/stories/components/02-team/monta-provas/chart/chart-usage.stories.mdx
@@ -10,9 +10,9 @@ import { Meta } from "@storybook/addon-docs/blocks";
 <div class="monta-provas__chart">
   <med-chart-donut class="med-chart-donut">
     <div class="med-chart-donut__total">
-      <span class="med-chart-donut__total">Total de</span>
-      <span>100</span>
-      <span>Questões</span>
+      <span class="med-chart-donut__label">Total de</span>
+      <span class="med-chart-donut__number">100</span>
+      <span class="med-chart-donut__label">Questões</span>
     </div>
   </med-chart-donut>
 </div>
