--- a/core/src/stories/components/med-alternativas/med-alternativas-usage.stories.mdx
+++ b/core/src/stories/components/med-alternativas/med-alternativas-usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Components/Team/Alternativas/Usage" />
+<Meta title="Components/Team/Questões/Alternativas/Usage" />
 
 # Alternativas
 
