--- a/core/src/stories/components/med-cartao-resposta-item/med-cartao-resposta-item-usage.stories.mdx
+++ b/core/src/stories/components/med-cartao-resposta-item/med-cartao-resposta-item-usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Components/Team/Cartão Resposta Item/Usage" />
+<Meta title="Components/Team/Questões/Cartão Resposta Item/Usage" />
 
 # Usage
 
