--- a/core/src/stories/components/med-cartao-resposta-lista/med-cartao-resposta-lista-usage.stories.mdx
+++ b/core/src/stories/components/med-cartao-resposta-lista/med-cartao-resposta-lista-usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Components/Team/Cartão Resposta Lista/Usage" />
+<Meta title="Components/Team/Questões/Cartão Resposta Lista/Usage" />
 
 # Cartão Resposta Lista
 
