--- a/core/src/stories/components/med-options/med-option-usage.stories.mdx
+++ b/core/src/stories/components/med-options/med-option-usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Components/Team/Option/Usage" />
+<Meta title="Components/Team/Questões/Option/Usage" />
 
 # Usage
 
