--- a/core/src/stories/components/med-enunciado-discursiva/med-enunciado-discursiva-usage.stories.mdx
+++ b/core/src/stories/components/med-enunciado-discursiva/med-enunciado-discursiva-usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Components/Team/Enunciado Discursiva/Usage" />
+<Meta title="Components/Team/Questões/Enunciado Discursiva/Usage" />
 
 # Usage
 
