--- a/core/src/stories/components/med-enunciado/med-enunciado-usage.stories.mdx
+++ b/core/src/stories/components/med-enunciado/med-enunciado-usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Components/Team/Enunciado/Usage" />
+<Meta title="Components/Team/Questões/Enunciado/Usage" />
 
 # Usage
 
