doc: atualizado documentação do medAlternativa

--- a/core/src/stories/components/med-alternativas/med-alternativas-usage.stories.mdx
+++ b/core/src/stories/components/med-alternativas/med-alternativas-usage.stories.mdx
@@ -21,7 +21,8 @@ import { Meta } from "@storybook/addon-docs/blocks";
 
 | Event                 | Descrição                                 | Type                        |
 | --------------------- | ----------------------------------------- | --------------------------- |
-| **medChange**         | Emitido quando é feito um click no option | **MedAlternativaInterface** |
+| **medChange**         | Emitido quando é feito um click ou alterado | **MedAlternativaInterface** |
+| **medClick**         | Emitido quando é feito um click no option | **MedAlternativaInterface** |
 | **medGalleryRequest** | Emitido quando é feito um click na imagem | **MedAlternativaInterface** |
 
 ## Interfaces
