--- a/core/src/stories/components/global/back-button/back-button-usage.stories.mdx
+++ b/core/src/stories/components/global/back-button/back-button-usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Components/Core/Button/Usage" />
+<Meta title="Components/Core/Back Button/Usage" />
 
 # Button
 
